# aladdin-2fa-cli

./: Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: release.yaml
docker/: Dockerfile
src/: commands.rs  main.rs  subcommands.rs
src/jas/: mod.rs  ticket.rs
src/jas/client/: mod.rs
src/jas/client/dtos/: accept.rs  mod.rs  register.rs  update.rs
