[package]
name = "aladdin-2fa-cli"
version = "0.0.5"
edition = "2024"

[dependencies]
aes-gcm = { version = "=0.10.3", default-features = false, features = ["aes", "alloc"] }
base64 = { version = "=0.22.1", default-features = false, features = [] }
chrono = { version = "=0.4.42", default-features = false, features = ["now"] }
clap = { version = "=4.5.49", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
color-eyre = { version = "=0.6.5", default-features = false, features = [] }
hmac = { version = "=0.12.1", default-features = false, features = [] }
regex = { version = "=1.11.3", default-features = false, features = [] }
reqwest = { version = "=0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
serde_qs = { version = "=0.15.0", default-features = false, features = [] }
sha2 = { version = "=0.10.9", default-features = false, features = [] }
tokio = { version = "=1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
totp-rs = { version = "=5.7.0", default-features = false, features = ["otpauth"] }
tracing = { version = "=0.1.41", default-features = false, features = [] }
tracing-subscriber = { version = "=0.3.20", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
url = { version = "=2.5.7", default-features = false, features = [] }

[features]
err-loc = ["color-eyre/track-caller"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
